Add scroll for overflow in movies selection

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,11 @@ input {
 .movies-selection {
   display: flex;
   flex-wrap: nowrap;
+
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: wrap;
+  width: 70rem;
 }
 
 .movie {
