--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,15 @@ ul {
 input {
   width: 500px;
   height: 20px;
+  padding-left: 25px;
   background-color: #f8cb5b;
   color: #624d21;
   border-radius: 5px;
+}
+
+#search {
+  background-image: url("./imgs/icons/magnifying-glass-solid.svg");
+  background-repeat: no-repeat;
 }
 
 .trend-bar {
