--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,49 @@ main {
 
 footer {
   display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  background-color: #febd04;
+
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+}
+
+.footer-content {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer-middle {
+  display: flex;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  background-color: grey;
+}
+
+.footer-list {
+  display: flex;
+  flex-flow: column wrap;
+  color: black;
+}
+
+.footer-copyright {
+  background-color: #896602;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.footer-link:link {
+  color: black;
+}
+
+hr {
+  width: 100%;
+  border: 5px #896602 solid;
+}
+
+.footer-social-net {
+  margin: 10px auto;
 }
